# e1900288-final-project

./: .dockerignore  .gitignore  Dockerfile  Project Plan.md  README.md  app.py  docker-compose.yml  env_var.py  extensions.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
gallery/: models.py  views.py
templates/: center_content.html  form.html  index.html  login.html  not_found.html  signup.html
tests/: conftest.py  fixtures.py  test_gallary.py  test_login.py
user/: models.py  views.py
