[tool.poetry]
name = "simplegallery"
version = "0.1.0"
description = ""
authors = ["bobokrut <egor-evlampiev@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-Login = "^0.6.0"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
Pillow = "^9.1.0"
psycopg2-binary = "^2.9.3"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.mypy]
ignore_missing_imports=true
warn_unused_configs=true
disallow_subclassing_any=true
disallow_untyped_calls=true
disallow_untyped_defs=true
disallow_incomplete_defs=true
check_untyped_defs=true
no_implicit_optional=true
warn_redundant_casts=true
warn_unused_ignores=true
warn_return_any=true
no_implicit_reexport=true
strict_equality=true
